Se modifico la vista de sugerencias

--- a/WBooks/source/controllers/Home/HomeView.xib
+++ b/WBooks/source/controllers/Home/HomeView.xib
@@ -17,21 +17,21 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="650"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="yrA-im-brh">
-                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <rect key="frame" x="0.0" y="44" width="414" height="606"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YyK-DB-RBP">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="606"/>
                             <subviews>
                                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="oU5-AT-CHe">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="606"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="414" id="LGE-7e-yX7"/>
-                                        <constraint firstAttribute="height" constant="818" id="RYr-oW-HgA"/>
+                                        <constraint firstAttribute="height" constant="606" id="s7G-Il-VEU"/>
                                     </constraints>
                                 </tableView>
                             </subviews>
@@ -54,7 +54,8 @@
                 <constraint firstItem="yrA-im-brh" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="ZW0-FV-HNF"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="yrA-im-brh" secondAttribute="trailing" id="ssq-Rb-0Tm"/>
             </constraints>
-            <point key="canvasLocation" x="139" y="76"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="137.68115942028987" y="-6.6964285714285712"/>
         </view>
     </objects>
     <resources>
