--- a/WBooks/source/controllers/Rent/RentedBooks/BookSuggestionCell.xib
+++ b/WBooks/source/controllers/Rent/RentedBooks/BookSuggestionCell.xib
@@ -21,30 +21,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="60" height="100"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="VBg-5g-13f">
-                                <rect key="frame" x="0.0" y="3" width="60" height="94"/>
+                                <rect key="frame" x="8" y="0.0" width="44" height="100"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eiR-Hi-L1O">
-                                        <rect key="frame" x="0.0" y="0.0" width="60" height="94"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="60" id="J3h-dQ-j2J"/>
-                                            <constraint firstAttribute="height" constant="94" id="Mlo-Xm-Xie"/>
-                                        </constraints>
+                                        <rect key="frame" x="0.0" y="0.0" width="44" height="100"/>
                                     </imageView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="eiR-Hi-L1O" firstAttribute="top" secondItem="VBg-5g-13f" secondAttribute="top" id="Hhd-sb-9lO"/>
-                                    <constraint firstAttribute="trailing" secondItem="eiR-Hi-L1O" secondAttribute="trailing" id="KAx-9Z-6gT"/>
-                                    <constraint firstAttribute="bottom" secondItem="eiR-Hi-L1O" secondAttribute="bottom" id="O1r-ny-g18"/>
-                                    <constraint firstItem="eiR-Hi-L1O" firstAttribute="leading" secondItem="VBg-5g-13f" secondAttribute="leading" id="lGZ-4c-gdE"/>
+                                    <constraint firstItem="eiR-Hi-L1O" firstAttribute="leading" secondItem="VBg-5g-13f" secondAttribute="leading" id="fGa-mA-wo6"/>
+                                    <constraint firstItem="eiR-Hi-L1O" firstAttribute="top" secondItem="VBg-5g-13f" secondAttribute="top" id="ji8-hU-Z19"/>
+                                    <constraint firstAttribute="bottom" secondItem="eiR-Hi-L1O" secondAttribute="bottom" id="lcX-A2-Ae1"/>
+                                    <constraint firstAttribute="trailing" secondItem="eiR-Hi-L1O" secondAttribute="trailing" id="xKm-t3-hIu"/>
                                 </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="VBg-5g-13f" firstAttribute="leading" secondItem="aBa-jI-I27" secondAttribute="leading" id="Ofz-Z4-Fgq"/>
-                            <constraint firstItem="VBg-5g-13f" firstAttribute="top" secondItem="aBa-jI-I27" secondAttribute="top" constant="3" id="Z9c-Ce-ToM"/>
-                            <constraint firstAttribute="trailing" secondItem="VBg-5g-13f" secondAttribute="trailing" id="nRa-z9-ES0"/>
-                            <constraint firstAttribute="bottom" secondItem="VBg-5g-13f" secondAttribute="bottom" constant="3" id="wu7-G7-Qrk"/>
+                            <constraint firstAttribute="bottom" secondItem="VBg-5g-13f" secondAttribute="bottom" id="4cJ-U4-9XL"/>
+                            <constraint firstAttribute="trailing" secondItem="VBg-5g-13f" secondAttribute="trailing" constant="8" id="6SI-1b-e6x"/>
+                            <constraint firstItem="VBg-5g-13f" firstAttribute="top" secondItem="aBa-jI-I27" secondAttribute="top" id="9kd-G7-7HY"/>
+                            <constraint firstItem="VBg-5g-13f" firstAttribute="leading" secondItem="aBa-jI-I27" secondAttribute="leading" constant="8" id="FZr-96-tBP"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -59,6 +55,7 @@
             <size key="customSize" width="130" height="127"/>
             <connections>
                 <outlet property="imageBook" destination="eiR-Hi-L1O" id="ii0-Z4-13n"/>
+                <outlet property="viewBackground" destination="aBa-jI-I27" id="n5Y-h3-Dtj"/>
             </connections>
             <point key="canvasLocation" x="190.57971014492756" y="103.45982142857143"/>
         </collectionViewCell>
