--- a/WBooks/source/controllers/NewBook/NewBookView.xib
+++ b/WBooks/source/controllers/NewBook/NewBookView.xib
@@ -52,22 +52,22 @@
                                                 </userDefinedRuntimeAttribute>
                                             </userDefinedRuntimeAttributes>
                                         </textField>
-                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Author" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FrS-ka-7ht" userLabel="Book Author">
+                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Author" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FrS-ka-7ht" userLabel="Book Author" customClass="FormTextField" customModule="WBooks" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="52" width="231" height="42.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits"/>
                                         </textField>
-                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Year" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fCm-sq-LWD" userLabel="Book Year">
+                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Year" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fCm-sq-LWD" userLabel="Book Year" customClass="FormTextField" customModule="WBooks" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="103.5" width="231" height="43"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits"/>
                                         </textField>
-                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Topic" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Y3H-TF-xlm" userLabel="Book Genre">
+                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Topic" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Y3H-TF-xlm" userLabel="Book Genre" customClass="FormTextField" customModule="WBooks" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="155.5" width="231" height="42.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits"/>
                                         </textField>
-                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XBu-37-7xV" userLabel="Book Description">
+                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XBu-37-7xV" userLabel="Book Description" customClass="FormTextField" customModule="WBooks" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="207" width="231" height="43"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits"/>
@@ -114,6 +114,18 @@
     <designables>
         <designable name="1fC-4o-v7b">
             <size key="intrinsicContentSize" width="111.5" height="34"/>
+        </designable>
+        <designable name="FrS-ka-7ht">
+            <size key="intrinsicContentSize" width="71.5" height="34"/>
+        </designable>
+        <designable name="XBu-37-7xV">
+            <size key="intrinsicContentSize" width="102" height="34"/>
+        </designable>
+        <designable name="Y3H-TF-xlm">
+            <size key="intrinsicContentSize" width="63" height="34"/>
+        </designable>
+        <designable name="fCm-sq-LWD">
+            <size key="intrinsicContentSize" width="56.5" height="34"/>
         </designable>
     </designables>
     <resources>
