--- a/WBooks/source/controllers/Rent/BookSuggestions/BookSuggestionsView.xib
+++ b/WBooks/source/controllers/Rent/BookSuggestions/BookSuggestionsView.xib
@@ -16,14 +16,14 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="110"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="120"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="toZ-XE-ke2">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="110"/>
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="120"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="7tP-0j-Qdm">
-                            <rect key="frame" x="30" y="43.5" width="354" height="60.5"/>
+                            <rect key="frame" x="30" y="51.5" width="354" height="60.5"/>
                             <subviews>
                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="nua-Qn-JQr">
                                     <rect key="frame" x="0.0" y="0.0" width="354" height="60.5"/>
@@ -41,7 +41,7 @@
                             </constraints>
                         </stackView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Suggestions" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T4O-GC-OPE">
-                            <rect key="frame" x="30" y="9" width="94.5" height="20.5"/>
+                            <rect key="frame" x="30" y="9" width="94.5" height="30.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -49,11 +49,11 @@
                     </subviews>
                     <constraints>
                         <constraint firstItem="T4O-GC-OPE" firstAttribute="leading" secondItem="toZ-XE-ke2" secondAttribute="leading" constant="30" id="IiO-BX-6G4"/>
-                        <constraint firstItem="7tP-0j-Qdm" firstAttribute="top" secondItem="T4O-GC-OPE" secondAttribute="bottom" constant="14" id="jPe-jU-wxS"/>
+                        <constraint firstItem="7tP-0j-Qdm" firstAttribute="top" secondItem="T4O-GC-OPE" secondAttribute="bottom" constant="12" id="jPe-jU-wxS"/>
                         <constraint firstItem="7tP-0j-Qdm" firstAttribute="leading" secondItem="toZ-XE-ke2" secondAttribute="leading" constant="30" id="jix-yw-6YI"/>
                         <constraint firstAttribute="trailing" secondItem="7tP-0j-Qdm" secondAttribute="trailing" constant="30" id="oA8-ro-4Yg"/>
                         <constraint firstItem="T4O-GC-OPE" firstAttribute="top" secondItem="toZ-XE-ke2" secondAttribute="top" constant="9" id="rqV-U3-gzi"/>
-                        <constraint firstAttribute="bottom" secondItem="7tP-0j-Qdm" secondAttribute="bottom" constant="6" id="zEr-oS-6gH"/>
+                        <constraint firstAttribute="bottom" secondItem="7tP-0j-Qdm" secondAttribute="bottom" constant="8" id="zEr-oS-6gH"/>
                     </constraints>
                 </view>
             </subviews>
@@ -66,7 +66,7 @@
                 <constraint firstAttribute="bottom" secondItem="toZ-XE-ke2" secondAttribute="bottom" id="zEE-t8-YCL"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="249" y="-224"/>
+            <point key="canvasLocation" x="247.82608695652175" y="-224.33035714285714"/>
         </view>
     </objects>
     <resources>
